--- a/source/index.html
+++ b/source/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Стартовый шаблон</title>
+  <title>Smart Device</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Добро пожаловать в Лигу А.</h1>
+  <header class="page-header">
+    <div class="page-header__top">
+      <a class="logo" href="#">
+        <img class="logo__image" src="#" alt="Логотип Smart Device" widtn="52" height="52">
+        <p class="logo__title">Smart Device</p>
+        <p class="logo__subtitle">умные технологии</p>
+      </a>
+      <p class="page-header__email">info@sd.ru</p>
+      <p class="page-header__phone">+7 (495) 000 52 52</p>
+      <a class="page-header__link" href="#">Заказать звонок</a>
+    </div>
+    <div class="start-home">
+      <div class="start-home__message"></div>
+      <div class="start-home__image">
+        <img src="#" alt="Фото плат" width="705" height="515">
+      </div>
+    </div>
+  </header>
 </body>
 </html>
