--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,11 @@
       <a class="page-header__link" href="#">Заказать звонок</a>
     </div>
     <div class="start-home">
-      <div class="start-home__message"></div>
+      <div class="start-home__message">
+        <h1>Печатные платы</h1>
+        <p>производство и монтаж, поставка комплектующих, блоков и модулей</p>
+        <button class="page-header__btn">Получить бесплатную консультацию</button>
+      </div>
       <div class="start-home__image">
         <img src="#" alt="Фото плат" width="705" height="515">
       </div>
