--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
   <header class="page-header">
     <div class="page-header__top">
       <a class="logo" href="#">
-        <img class="logo__image" src="#" alt="Логотип Smart Device" widtn="52" height="52">
+        <img class="logo__image" src="img/logo.png" alt="Логотип Smart Device" widtn="52" height="52">
         <p class="logo__title">Smart Device</p>
         <p class="logo__subtitle">умные технологии</p>
       </a>
@@ -30,5 +30,8 @@
       </div>
     </div>
   </header>
+  <main class="page-main">
+
+  </main>
 </body>
 </html>
