--- a/source/index.html
+++ b/source/index.html
@@ -19,13 +19,10 @@
     </div>
     <div class="start-home">
       <div class="start-home__message">
-        <p>Печатные платы</p>
-        <p>производство и монтаж, поставка комплектующих, блоков и модулей</p>
-        <button class="page-header__btn">Получить бесплатную консультацию</button>
+        <p class="start-home__title">Печатные платы</p>
+        <p class="start-home__subtitle">производство и монтаж, поставка комплектующих, блоков и модулей</p>
+        <button class="page-header__btn" type="button">Получить бесплатную консультацию</button>
         <b>Скролл вниз</b>
-      </div>
-      <div class="start-home__image">
-        <img src="#" alt="Фото плат" width="705" height="515">
       </div>
     </div>
   </header>
