--- a/source/index.html
+++ b/source/index.html
@@ -24,6 +24,13 @@
         <button class="page-header__btn" type="button">Получить бесплатную консультацию</button>
         <b>Скролл вниз</b>
       </div>
+      <div class="start-home__img">
+        <picture>
+          <source media="(max-width: 767px)" srcset="img/photo-boards-mobile@1x.png 1x, img/photo-boards-mobile@2x.png 2x">
+          <source media="(max-width: 1023px)" srcset="img/photo-boards-tablet@1x.png 1x, img/photo-boards-tablet@2x.png 2x">
+          <img src="img/photo-boards-desktop@1x.png" srcset="img/photo-boards-desktop@2x.png 2x" alt="Фото плат">
+        </picture>
+      </div>
     </div>
   </header>
   <main class="page-main">
