--- a/source/index.html
+++ b/source/index.html
@@ -16,8 +16,8 @@
           <img src="img/logo-header.svg" alt="Логотип компании">
         </picture>
       </a>
-      <a href="mailto: info@sd.ru" class="page-header__email">info@sd.ru</a>
-      <a href="tel: +7 (495) 000 52 52" class="page-header__phone">+7 (495) 000 52 52</a>
+      <a href="mailto:info@sd.ru" class="page-header__email">info@sd.ru</a>
+      <a href="tel:+7(495)0005252" class="page-header__phone">+7 (495) 000 52 52</a>
       <a class="page-header__link" href="#">Заказать звонок</a>
     </div>
     <div class="start-home">
@@ -130,34 +130,30 @@
     <section class="feedback">
       <h2 class="visually-hidden">Форма обратной связи</h2>
       <div class="container">
-        <!-- <div class="feedback__image">
-          <img src="img/paper_airplane-desktop@1x.png" alt="Картинка бумажного самолетика" width="511" height="288">
-        </div> -->
         <div class="feedback__form-wrapp">
-          <p>Остались вопросы? Задайте их нам!</p>
-          <p>Мы проконсультируем Вас бесплатно</p>
+          <div class="feedback__image">
+              <img src="img/paper_airplane-desktop@1x.png" alt="Картинка бумажного самолетика">
+          </div>
           <form class="form" action="#" method="post">
-
-            <div class="form__field form__field--name">
+              <p>Остались вопросы? Задайте их нам!</p>
+              <p>Мы проконсультируем Вас бесплатно</p>
+            <div class="form__field-name">
               <label class="visually-hidden" for="name-field">Имя</label>
               <input type="text" id="name-field" name="name" placeholder="Имя">
-            </div>
 
-            <div class="form__field form__field--email">
               <label class="visually-hidden" for="tel-field">Телефон</label>
               <input type="text" id="tel-field" name="tel" placeholder="Телефон">
             </div>
 
-            <div class="form__field form__field--textarea">
+            <div class="form__field-textarea">
               <textarea name="question" placeholder="Ваш вопрос"></textarea>
             </div>
 
-            <button type="submit">Задать вопрос</button>
-            <div class="form__field form__field--checkbox">
-              <input type="checkbox" name="consent" id="consent-field" checked>
+            <div class="form__field-bottom">
+              <button type="submit">Задать вопрос</button>
+              <input type="checkbox" name="consent" id="consent-field" checked class="visually-hidden">
               <label for="consent-field">Я согласен на обработку  персональных данных</label>
             </div>
-
           </form>
         </div>
       </div>
