--- a/source/index.html
+++ b/source/index.html
@@ -191,6 +191,7 @@
       </div>
 
       <nav class="page-footer__nav footer-nav">
+        <p>Разделы сайта</p>
         <ul class="footer-nav__list">
           <li class="footer-nav__item">
             <a href="#">О компании</a>
