--- a/source/index.html
+++ b/source/index.html
@@ -194,29 +194,23 @@
         <p>Разделы сайта</p>
         <ul class="footer-nav__list">
           <li class="footer-nav__item">
-            <a href="#">О компании</a>
+            <ul class="footer-nav__group">
+              <li><a href="#">О компании</a></li>
+              <li><a href="#">Продукты</a></li>
+              <li><a href="#">Производство печатных плат</a></li>
+              <li><a href="#">Монтаж печатных плат</a></li>
+            </ul>
           </li>
+
           <li class="footer-nav__item">
-            <a href="#">Продукты</a>
-          </li>
-          <li class="footer-nav__item">
-            <a href="#">Производство печатных плат</a>
-          </li>
-          <li class="footer-nav__item">
-            <a href="#">Монтаж печатных плат</a>
-          </li>
-          <li class="footer-nav__item">
-            <a href="#">Комплектующие</a>
-          </li>
-          <li class="footer-nav__item">
-            <a href="#">Доставка</a>
-          </li>
-          <li class="footer-nav__item">
-            <a href="#">Контакты</a>
+            <ul class="footer-nav__group">
+              <li><a href="#">Комплектующие</a></li>
+              <li><a href="#">Доставка</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
           </li>
         </ul>
       </nav>
-
       <div class="page-footer__contacts">
           <h3>Наш офис</h3>
           <p>г. Мытищи, Олимпийский проспект, д.10</p>
