--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
         <p class="start-home__title">Печатные платы</p>
         <p class="start-home__subtitle">производство и монтаж, поставка комплектующих, блоков и модулей</p>
         <button class="page-header__btn" type="button">Получить бесплатную консультацию</button>
-        <a href="#">Скролл вниз</a>
+        <a href="#ya1" class="scroll">Скролл вниз</a>
       </div>
       <div class="start-home__img">
         <picture>
@@ -35,7 +35,7 @@
         </picture>
       </div>
     </div>
-    <div class="wrapp-modal">
+    <div class="wrapp-modal hidden">
       <div class="modal">
         <button class="modal__close" type="button">close</button>
         <form class="callback-form" action="#" method="post">
@@ -55,15 +55,15 @@
 
           <div class="callback-form__field-bottom">
             <button type="submit">Отправить</button>
-            <input type="checkbox" name="consent" id="consent-field" checked class="visually-hidden">
-            <label for="consent-field">Я согласен на обработку  персональных данных</label>
+            <input type="checkbox" name="consent" id="checkbox-field" checked class="visually-hidden">
+            <label for="checkbox-field">Я согласен на обработку  персональных данных</label>
           </div>
         </form>
       </div>
     </div>
   </header>
   <main class="page-main">
-    <h1 class="visually-hidden">Сайт по заказу печатных плат</h1>
+    <h1 class="visually-hidden" id="ya1">Сайт по заказу печатных плат</h1>
     <div class="wrap-block">
       <div class="container">
         <section class="advantages">
@@ -254,5 +254,6 @@
       </div>
     </div>
   </footer>
+  <script src="js/main.js"></script>
 </body>
 </html>
