--- a/source/index.html
+++ b/source/index.html
@@ -254,6 +254,7 @@
       </div>
     </div>
   </footer>
+  <script src="https://unpkg.com/imask"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
