--- a/source/index.html
+++ b/source/index.html
@@ -189,7 +189,7 @@
     <div class="page-footer__inner">
       <div class="page-footer__social">
         <a class="logo" href="#">
-          <img src="img/logo-footer.svg" alt="Логотип компании" width="216" height="52">
+          <img src="img/logo-footer.svg" alt="Логотип компании">
         </a>
         <p>1999-2018 SD Service Devices</p>
         <ul class="social-list">
@@ -219,7 +219,7 @@
       </div>
 
       <nav class="page-footer__nav footer-nav">
-        <p>Разделы сайта</p>
+        <p class="menu__js">Разделы сайта</p>
         <ul class="footer-nav__list">
           <li class="footer-nav__item">
             <ul class="footer-nav__group">
