--- a/source/index.html
+++ b/source/index.html
@@ -164,11 +164,11 @@
               <p>Остались вопросы? Задайте их нам!</p>
               <p>Мы проконсультируем Вас бесплатно</p>
             <div class="form__field-name">
-              <label class="visually-hidden" for="name-field">Имя</label>
-              <input type="text" id="name-field" name="name" placeholder="Имя">
+              <label class="visually-hidden" for="name-field-feedback">Имя</label>
+              <input type="text" id="name-field-feedback" name="name" placeholder="Имя">
 
-              <label class="visually-hidden" for="tel-field">Телефон</label>
-              <input type="text" id="tel-field" name="tel" placeholder="Телефон">
+              <label class="visually-hidden" for="tel-field-">Телефон</label>
+              <input type="text" id="tel-field-feedback" name="tel" placeholder="Телефон">
             </div>
 
             <div class="form__field-textarea">
@@ -219,7 +219,7 @@
       </div>
 
       <nav class="page-footer__nav footer-nav">
-        <p class="menu__js">Разделы сайта</p>
+        <p class="footer-nav__js">Разделы сайта</p>
         <ul class="footer-nav__list">
           <li class="footer-nav__item">
             <ul class="footer-nav__group">
