--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="производство и монтаж, поставка комплектующих, блоков и модулей">
   <meta name="keywords" content="светотехника, печатные платы, монтаж плат, производство плат">
   <title>Smart Device</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
   <header class="page-header">
